# red-hat-ai-examples

./: .gitignore  .secrets.baseline  .talismanrc
examples/agentic-evaluation/: README.md  tools.py
examples/agentic-evaluation/.guardrails/: hub_registry.json
examples/automl/: churn_prediction_tutorial.md  readme.md  time_series_forecasting_tutorial.md
examples/automl/serving/: serving_runtime.yaml
examples/autorag/: readme.md  red_hat_summit_tutorial.md
examples/fine-tuning/: README.md  mlflow.md
examples/fine-tuning/grpo_ray/: README.md  grpo_lora-rayjob.ipynb
examples/fine-tuning/lora/: README.md  lora_sft-distributed.ipynb  lora_sft-interactive-notebook.ipynb
examples/fine-tuning/lora_ray/: README.md  lora_sft-ray.ipynb
examples/fine-tuning/osft/: README.md  osft-distributed.ipynb  osft-interactive-notebook.ipynb
examples/fine-tuning/osft_ray/: README.md  osft-ray.ipynb
examples/fine-tuning/sft/: README.md  sft-distributed.ipynb  sft-interactive-notebook.ipynb
examples/fine-tuning/sft_ray/: README.md  sft-ray.ipynb
examples/knowledge-tuning/: README.md
examples/knowledge-tuning/Kubeflow_Pipeline/: README.md  pipeline.py  pyproject.toml
examples/knowledge-tuning/Kubeflow_Pipeline/components/: document_processing.py  knowledge_generation.py  knowledge_mixing.py
examples/model-serve-flow/: README.md
examples/model-serve-flow/00_Setup/: 00_Setup_README.md
examples/model-serve-flow/01_Base_Accuracy_Benchmarking/: 01_Base_Accuracy_Benchmarking_README.md  Base_Accuracy_Benchmarking.ipynb
examples/model-serve-flow/docs/: Compression.md  (+3 more)
(+67 files in other folders)
